--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ricky/teops",
+    "name": "rickylee/teops",
     "description": "A test optimization schemes",
     "type": "library",
     "license": "BSD-3-Clause",
